fix: 依存パッケージの誤り openssh -> openssh-client

--- a/package/deb/DEBIAN/control
+++ b/package/deb/DEBIAN/control
@@ -10,7 +10,7 @@ Conflicts:
 Replaces: 
 Provides: 
 Description: Reverse SSH Port Forwarding daemon for neorok
-Depends: openssh
+Depends: openssh-client
 Recommends:
 Suggests: 
 
